# AdapterService

./: .dockerignore  .env.example  .gitignore  Dockerfile  FUTURE_PLAN.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirement.md  requirements.txt  run.py
.planning/: PROJECT.md  ROADMAP.md  STATE.md
docker/: README.md  init-mongo.js
docs/: ARCHITECTURE.md  CONFIGURATION.md  CSV_SUPPORT_PLAN.md  DATA_FLOW.md  DEVELOPMENT.md  MODULES.md
sftp_conf/: users.conf
src/config/: __init__.py  cache.py  loader.py  settings.py  validator.py
src/core/: constants.py  enums.py  types.py
src/fetchers/: __init__.py  api_fetcher.py  base.py  filedrop_fetcher.py  sftp_fetcher.py
src/logging/: __init__.py  logger.py
src/models/: __init__.py  data_container.py  fetch_config.py  indexes.py  internal_transaction.py  mapping_config.py  reconciliation_file.py  reconciliation_result.py  repository.py
src/normalizer/: __init__.py  normalizer.py
src/pipeline/: __init__.py  ingestion_pipeline.py
src/readers/: __init__.py  csv_reader.py  excel_reader.py
src/reconciliation/: __init__.py  engine.py
src/scheduler/: __init__.py  config.py  jobs.py  scheduler.py
tests/: conftest.py  test_config_cache.py  test_config_loader.py  test_config_validator.py  test_core_types.py  test_csv_reader.py  test_excel_reader.py  test_indexes.py  test_ingestion_integration.py  test_ingestion_pipeline.py  test_logger.py  test_models.py  test_normalizer.py  test_phase8.py  test_reader_factory.py  test_reconciliation.py  test_settings.py  test_validator.py
(+51 files in other folders)
