[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconciliation-ingestion"
version = "0.1.0"
description = "Configurable reconciliation ingestion platform"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "motor>=3.0",
    "python-decouple>=3.8",
    "paramiko>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
